Integrate with eclipse DTP for dumping database/schemas/tables/cols information.

--- a/releng/com.jeevaneo.hdp.ingest.jdbc.explorer/plugin.xml
+++ b/releng/com.jeevaneo.hdp.ingest.jdbc.explorer/plugin.xml
@@ -5,7 +5,7 @@
    <extension
          point="org.eclipse.ui.popupMenus">
       <objectContribution
-            objectClass="com.jeevaneo.hdp.ingest.Database"
+            objectClass="org.eclipse.datatools.connectivity.sqm.core.rte.ICatalogObject"
             id="com.jeevaneo.hdp.ingest.jdbc.explorer.contribution1">
          <menu
                label="JDBC"
