--- a/releng/com.jeevaneo.hdp.ingest.model.edit/plugin.properties
+++ b/releng/com.jeevaneo.hdp.ingest.model.edit/plugin.properties
@@ -43,3 +43,6 @@ _UI_DbColumn_jdbcScale_feature = Jdbc Scale
 _UI_DbColumn_jdbcPrecision_feature = Jdbc Precision
 _UI_Unknown_feature = Unspecified
 
+_UI_Catalogue_type = Catalogue
+_UI_DbTable_sqoopImports_feature = Sqoop Imports
+_UI_Catalogue_databases_feature = Databases
